Fix image issues

--- a/misc/experiment_parallel/技术演示 - 并发执行的多测试数据对拍脚本.md
+++ b/misc/experiment_parallel/技术演示 - 并发执行的多测试数据对拍脚本.md
@@ -127,7 +127,7 @@
 
 我对P7的编译结果进行了查看，总大小是3mb左右；正常测试点数量规模下，占用还是能控制到1gb以下的；况且我们最后还是要给它删掉的嘛...
 
-![Pasted image 20241211213111.png](./assets/Pasted_image_20241211213111.png)
+![Pasted_image_20241211213111.png](./assets/Pasted_image_20241211213111.png)
 
 ```c
 @echo off
@@ -204,13 +204,13 @@ rmdir /s /q temp
 这里，我选择同时测试3组P7的测试点来进行性能分析。
 
 我的电脑配置如下：
-![Pasted image 20241211214558.png](./assets/Pasted image 20241211214558.png)
+![Pasted_image_20241211214558.png](./assets/Pasted_image_20241211214558.png)
 
 在CPU占用上，**每一个**`mips.exe`的CPU占用**就已在10~20%左右波动**；这也是为什么我上面说，现在的调度策略行不通：
-  ![Pasted image 20241211214616.png](./assets/Pasted image 20241211214616.png)
+  ![Pasted_image_20241211214616.png](./assets/Pasted_image_20241211214616.png)
 
 内存占用其实还好，算上命令行和mips.exe的，总体还在可接受范围：
-![Pasted image 20241211214957.png](./assets/Pasted image 20241211214957.png)
+![Pasted_image_20241211214957.png](./assets/Pasted_image_20241211214957.png)
 
 
 # 好解决的
